force-app/main/default/objects/ServiceCharge__mdt/ServiceCharge__mdt.object-meta.xml
<CustomObject>
    <label>Service Charge</label>
    <pluralLabel>Service Charges</pluralLabel>
</CustomObject>