force-app/main/default/objects/ServiceCharge__mdt/fields/DeliveryCost__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCost__c</fullName>
    <label>DeliveryCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>