force-app/main/default/objects/ServiceCharge__mdt/fields/WillCallCost__c.field-meta.xml
<CustomField>
    <fullName>WillCallCost__c</fullName>
    <label>Will Call Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>